# fastapi_auth

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  sql_db.database
api/v1/: __init__.py  auth.py
api/v1/endpoints/: __init__.py  items.py  user.py
api/v1/schemas/: pydantic_schemas.py
db/: database.py  models.py
schemas/: pydantic_schemas.py
sql_db/: database.py  models.py
utils/: items.py  user.py
